Styles: fix table border collapse

--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -69,6 +69,10 @@ body {
   padding-bottom: 0;
 }
 
+table {
+  border-collapse: collapse;
+}
+
 footer.site-footer {
   display: none;
 }
